[package]
name        = "warpwallet"
version     = "0.0.0"
description = "Rust implementation of WarpWallet"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "WTFPL OR MIT OR Apache-2.0"
homepage    = "https://github.com/casey/warpwallet"

[dependencies]
brev            = "0.1.7"
clap            = "2.20.3"
error-chain     = "0.9.0"
regex           = "0.2.1"
ring            = "0.6.3"
ring-pwhash     = "0.1.2"
rustc-serialize = "0.3.22"
serde           = "0.9.7"
serde_derive    = "0.9.7"
serde_json      = "0.9.6"
